<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ac_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_loginscreen"
    tools:context="LoginActivity">

  <TextView
      android:id="@+id/login"
      style="@style/Heading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="72dp"
      android:text="@string/vista"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/textPassword"
      style="@style/TextField"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:minHeight="48dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textEmail" />


  <EditText
      android:id="@+id/textEmail"
      style="@style/TextField"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="104dp"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:minHeight="48dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login" />

  <Button
      android:id="@+id/buttonLog"
      style="@style/button"
      android:layout_width="112dp"
      android:layout_height="48dp"
      android:layout_marginTop="64dp"
      android:text="@string/sign_in"
      android:textAllCaps="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.658"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textPassword"
      app:layout_constraintVertical_bias="0.083" />

  <TextView
      android:id="@+id/noAccount"
      style="@style/textLinks"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:text="@string/no_account"
      app:layout_constraintBottom_toTopOf="@+id/buttonLog"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textPassword"
      app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>