<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_loginscreen"
    android:clickable="true"
    tools:context=".AddNewSpotFragment"
    android:windowSoftInputMode="adjustPan">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="0dp"
        android:layout_height="80sp"
        android:background="@drawable/rounded_bottom_corners"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textANSName"
        style="@style/TextField"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:clickable="false"
        android:ems="10"
        android:hint="@string/spot_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/page_title"
        app:layout_constraintEnd_toEndOf="@+id/page_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/page_title" />


    <ScrollView
        android:id="@+id/ANSscrollViewComplt"
        android:layout_width="wrap_content"
        android:layout_height="627dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_title"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ANS_deletePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/red"
                android:contentDescription="@string/submitbutton"
                android:src="@drawable/ic_delete"
                android:text="@string/submit"
                android:visibility="invisible"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:rippleColor="#FFFFFF" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ANS_takePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="136dp"
                android:layout_marginBottom="56dp"
                android:backgroundTint="@color/blue"
                android:contentDescription="@string/submitbutton"
                android:src="@drawable/ic_camera"
                android:text="@string/submit"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:rippleColor="#FFFFFF" />

            <TextView
                android:id="@+id/textANSTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/choose_one_type"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <HorizontalScrollView
                android:id="@+id/ANShschipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textANSTitle">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/ANSchipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textANSTitle"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ANSchipSunrise"
                        style="@style/chipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/yellow"
                        android:clickable="true"
                        android:text="@string/sunrise" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ANSchipSunset"
                        style="@style/chipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ANSchipMoonrise"
                        style="@style/chipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moonrise" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/ANSchipMoonset"
                        style="@style/chipChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moonset" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textANSTitle2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="28dp"
                android:text="@string/aera_type"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ANShschipGroup" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/ANSchipGroup2"
                style="@style/chipChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textANSTitle2">

                <com.google.android.material.chip.Chip
                    android:id="@+id/AnschipCoast"
                    style="@style/chipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/coast" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ANSchipNature"
                    style="@style/chipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nature" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ANSchipMountains"
                    style="@style/chipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mountains" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ANSchipUrban"
                    style="@style/chipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urban" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ANSchipRural"
                    style="@style/chipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rural" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ANSchipLake"
                    style="@style/chipChoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lake" />
            </com.google.android.material.chip.ChipGroup>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:layout_marginTop="24dp"
                app:layout_anchorGravity="bottom|right|end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ANSchipGroup2">

                <ProgressBar
                    android:id="@+id/ANSProgress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ANSsubmitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/tree_light"
                    android:contentDescription="@string/submitbutton"
                    android:src="@drawable/ic_baseline"
                    android:text="@string/submit"
                    app:fabSize="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:rippleColor="#FFFFFF" />

            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>